# ProjectStruct

./: .editorconfig  .gitignore  CMakeLists.txt
apps/mpl1c/: CMakeLists.txt
apps/mpl1c/src/: mpl1c.cpp
conan/: conanfile.cross-mingw-x64.txt  conanfile.linux-x64.txt  cross-mingw64-x64
libs/pilink/: CMakeLists.txt
libs/pilink/include/pilink/: pilink.hpp
libs/pilink/src/: pilink.cpp
libs/pilink/src/transport/usb/: usb_base.hpp  usb_impl.hpp
libs/pilink/src/transport/usb/libusb/: device.cpp  device.hpp  enumerate.cpp  enumerate.hpp  error.cpp  error.hpp
libs/pilink/src/transport/usb/winusb/: device.hpp  error.hpp
